[IWH-141](feat): create save comment endpoint
created save comment endpoint

Ticket: https://iwashere.atlassian.net/browse/IWH-141
