# src/posts/dto/save-comment-request.dto.ts
@@ -1,0 +1,16 @@
+import { IsLatitude, IsLongitude, IsNotEmpty, IsNumber } from 'class-validator';
+
+export class SaveCommentRequestDto {
+  @IsNotEmpty()
+  body: string;
+
+  @IsLatitude()
+  @IsNumber()
+  @IsNotEmpty()
+  latitude: number;
+
+  @IsLongitude()
+  @IsNumber()
+  @IsNotEmpty()
+  longitude: number;
+}
